fixed text color in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,6 @@
 
 .challenge {
   font-size: 1.5rem;
-  color: hsl(0 67% 9%);
   flex: 1;
   margin-bottom: 2rem;
 
